# PWLottie

./: .gitmodules  COPYING  README.md
example/PWLottieExample/: CMakeLists.txt  main.cpp
example/PWLottieExample/PrivateWeb/: .gitignore  README.md
example/PWLottieExample/assets/: assets.qrc
example/PWLottieExample/assets/Lotties/: normal-prefomance.json  optimized-perfomance.json
example/PWLottieExample/ui/: Main.qml
src/: CMakeLists.txt
src/include/PWControllerMediator/: PWControllerMediator.h
src/include/PWLottieControllers/: PWLottieAbstractController.h  PWLottieBaseController.h  PWLottieIconController.h
src/include/PWLottieItem/: PWLottieItem.h
src/sources/PWControllerMediator/: PWControllerMediator.cpp
src/sources/PWLottieControllers/: PWLottieBaseController.cpp  PWLottieIconController.cpp
src/sources/PWLottieItem/: PWLottieItem.cpp
